UtahLiveDataTest/src/objects/MSPGrant__c.object
<CustomObject>
    <fields>
        <fullName>AwardCount__c</fullName>
        <label>Award Count</label>
        <summaryForeignKey>MSPAward__c.MSPGrant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CatchUpSum__c</fullName>
        <label>Catch Up Sum</label>
        <summarizedField>MSPPayment__c.CatchUp__c</summarizedField>
        <summaryForeignKey>MSPPayment__c.MSPGrant__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CurrentAwardAmount__c</fullName>
        <label>Current Award Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>Fiscal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantNumber__c</fullName>
        <formula>&apos;MSPGT-&apos; + Program__r.ProgramKey__c + &apos;-&apos; + SubRecipient__r.LEA_Id__c + &apos;-&apos; + FiscalYear__c + &apos;-&apos; + ProgramCode__c + &apos;-&apos; + ObjectCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectCode__c</fullName>
        <label>Object Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentCount__c</fullName>
        <label>Payment Count</label>
        <summaryForeignKey>MSPPayment__c.MSPGrant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PaymentSum__c</fullName>
        <label>Payment Sum</label>
        <summarizedField>MSPPayment__c.PaymentAmount__c</summarizedField>
        <summaryForeignKey>MSPPayment__c.MSPGrant__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProgramCode__c</fullName>
        <label>Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>MSP Grants</relationshipLabel>
        <relationshipName>MSP_Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubRecipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SubRecipient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MSP Grants</relationshipLabel>
        <relationshipName>MSP_Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueKeyFormula__c</fullName>
        <formula>Program__c + SubRecipient__c + ProgramCode__c + ObjectCode__c + FiscalYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueKeyFormula</label>
        <type>Text</type>
    </fields>
    <label>MSP Grant</label>
    <nameField>
        <label>MSP Grant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSP Grants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>